--- a/source/_meta/_01-foot.mustache
+++ b/source/_meta/_01-foot.mustache
@@ -1,7 +1,8 @@
-<script src="../../js/vendor/jquery.min.js"></script>
-<script src="../../js/vendor/what-input.min.js"></script>
-<script src="../../js/foundation.js"></script>	
-<script src="../../js/app.js"></script>
+<!--<script src="../../js/vendor/jquery.min.js"></script>-->
+<!--<script src="../../js/vendor/what-input.min.js"></script>-->
+<!--<script src="../../js/foundation.js"></script>	-->
+<!--<script src="../../js/app.js"></script>-->
+<script src="../../js/postmessage.js"></script>
 
 	<!--DO NOT REMOVE-->
 	{{{ patternLabFoot }}}
