--- a/source/_meta/_01-foot.mustache
+++ b/source/_meta/_01-foot.mustache
@@ -2,10 +2,13 @@
 <!--<script src="../../js/vendor/what-input.min.js"></script>-->
 <!--<script src="../../js/foundation.js"></script>	-->
 <!--<script src="../../js/app.js"></script>-->
-<script src="../../js/postmessage.js"></script>
+<script src="../../js/postmessage.js?{{cacheBuster}}"></script>
 
-	<!--DO NOT REMOVE-->
-	{{{ patternLabFoot }}}
-	
-	</body>
+<!--DO NOT REMOVE-->
+{{{ patternLabFoot }}}
+
+<script src="../../js/pl-vendor-libraries.js?{{cacheBuster}}"></script>
+<script src="../../js/pl-source.js?{{cacheBuster}}"></script>
+
+</body>
 </html>
